# Risager-Manager/Models/RisagerContext.cs
@@ -9,5 +9,14 @@ namespace RisagerManagerServer.Models
     {
         public DbSet<User> User { get; set; }
         public DbSet<Booking> Booking { get; set; }
+        public DbSet<House> House { get; set; }
+
+        protected override void OnModelCreating(ModelBuilder modelBuilder)
+        {
+            base.OnModelCreating(modelBuilder);
+
+            modelBuilder.Entity<User>().HasMany((b) => b.Bookings).WithOne(x => x.BookingUser).OnDelete(DeleteBehavior.Cascade);
+            modelBuilder.Entity<House>().HasMany((b) => b.Bookings).WithOne(x => x.House).OnDelete(DeleteBehavior.Cascade);
+        }
     }
 }
